site/docs/4.0.4/api/python/_sources/reference/pyspark.sql/api/pyspark.sql.types.StructType.rst.txt
..  Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements.  See the NOTICE file
    distributed with this work for additional information
    regarding copyright ownership.  The ASF licenses this file
    to you under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License.  You may obtain a copy of the License at

..    http://www.apache.org/licenses/LICENSE-2.0

..  Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.


StructType
============================

.. currentmodule:: pyspark.sql.types

.. autoclass:: StructType

    
      
    

    
    

    .. rubric:: Methods

    .. autosummary::
    
       ~StructType.add
       ~StructType.fieldNames
       ~StructType.fromDDL
       ~StructType.fromInternal
       ~StructType.fromJson
       ~StructType.json
       ~StructType.jsonValue
       ~StructType.needConversion
       ~StructType.simpleString
       ~StructType.toDDL
       ~StructType.toInternal
       ~StructType.toNullable
       ~StructType.treeString
       ~StructType.typeName

    
    

    
    
    

    
    

    .. rubric:: Methods Documentation

    
    .. automethod:: add
    .. automethod:: fieldNames
    .. automethod:: fromDDL
    .. automethod:: fromInternal
    .. automethod:: fromJson
    .. automethod:: json
    .. automethod:: jsonValue
    .. automethod:: needConversion
    .. automethod:: simpleString
    .. automethod:: toDDL
    .. automethod:: toInternal
    .. automethod:: toNullable
    .. automethod:: treeString
    .. automethod:: typeName

    
    

    
    
    
